# notification-microservice

./: .env.example  .env.tests.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini
docker_compose/: app.yaml  broker.yaml  storages.yaml  tests-storages.yaml
src/application/api/: exception_handlers.py  main.py
src/application/external_events/consumers/: base.py  rabbitmq.py
src/application/external_events/handlers/: notifications.py
src/domain/commands/: notifications.py
src/domain/entities/: base.py  notifications.py
src/domain/exceptions/: notifications.py
src/domain/value_objects/: base.py  notifications.py
src/infrastructure/: models.py
src/infrastructure/converters/: notifications.py
src/infrastructure/exceptions/: notifications.py
src/infrastructure/migrations/: 20250612170617_initial.py
src/infrastructure/models/: notifications.py
src/infrastructure/repositories/: base.py  mongodb.py
src/infrastructure/senders/email/: base.py  smtp.py
src/infrastructure/senders/sms/: base.py  twilio.py
src/infrastructure/storages/: database.py
src/service/: message_bus.py
src/service/exceptions/: notifications.py
src/service/handlers/command/: notifications.py
src/settings/: config.py  container.py
src/settings/scripts/migrations/: run_downgrade_all.py  run_downgrade_one.py  run_migrate_all.py  run_migrate_one.py
tests/: config.py  conftest.py  fakes.py
tests/integration/application/external_events/consumers/: test_consumer.py
tests/integration/application/external_events/handlers/: test_handlers.py
tests/integration/infrastructure/producers/: test_producer.py
tests/integration/infrastructure/repositories/: test_repository.py
tests/integration/infrastructure/senders/email/: test_sender.py
tests/integration/infrastructure/senders/sms/: test_sender.py
tests/integration/service/handlers/command/: test_handlers.py
tests/unit/application/external_events/handlers/: test_handlers.py
tests/unit/domain/commands/: test_command.py
tests/unit/domain/entities/: test_notifications.py
tests/unit/domain/value_objects/: test_email_vo.py  test_name_vo.py  test_phone_number_vo.py
tests/unit/service/: test_message_bus.py
tests/unit/service/handlers/command/: test_handlers.py
