[project]
name = "notificationservice"
version = "0.1.0"
description = ""
authors = [
    {name = "defuzia",email = "zhyvhyn.roman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "beanie (>=1.29.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
