[project]
name = "NotificationService"
version = "0.1.0"
description = "Notification functionality related microservice."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aio-pika==9.5.5 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiormq==6.8.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "aiosmtplib==4.0.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "annotated-types==0.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "anyio==4.9.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "beanie==1.29.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "click==8.1.8 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.13' and python_full_version < '4.0' and sys_platform == 'win32'",
    "dnspython==2.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "exceptiongroup==1.2.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "fastapi==0.115.12 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "h11==0.14.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "iniconfig==2.1.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "lazy-model==0.2.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "motor==3.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "multidict==6.2.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "orjson>=3.10.16",
    "orjson==3.10.16 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "packaging==25.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pamqp==3.3.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pluggy==1.5.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "propcache==0.3.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "punq==0.7.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic==2.10.6 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic-core==2.27.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pydantic-settings==2.8.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pymongo==4.12.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "pytest==8.3.5 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "python-dotenv==1.1.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "sniffio==1.3.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "starlette==0.46.1 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "toml==0.10.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "uvicorn==0.34.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "yarl==1.19.0 ; python_full_version >= '3.13' and python_full_version < '4.0'",
    "twilio>=9.6.2",
]
